[gd_scene load_steps=6 format=3 uid="uid://d0aqos6cx38u4"]

[ext_resource type="Script" uid="uid://c2sp0pk0x7r54" path="res://scenes/ui/deepseek_chat_container.gd" id="1_t06ou"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i5ilr"]
bg_color = Color(1, 1, 1, 0.235294)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i5ilr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6bvgd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8882f"]

[node name="DeepseekChatContainer" type="VBoxContainer"]
offset_right = 782.0
offset_bottom = 908.0
size_flags_horizontal = 3
script = ExtResource("1_t06ou")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="MessagesVBox" type="VBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_i5ilr")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 8

[node name="BottomBar" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="MessageEdit" type="TextEdit" parent="PanelContainer/MarginContainer/BottomBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxEmpty_i5ilr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_6bvgd")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_8882f")
wrap_mode = 1
scroll_smooth = true
scroll_fit_content_height = true

[node name="Buttons" type="HBoxContainer" parent="PanelContainer/MarginContainer/BottomBar"]
layout_mode = 2

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/BottomBar/Buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SendButton" type="Button" parent="PanelContainer/MarginContainer/BottomBar/Buttons"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"PrimaryButton"
text = "Send"
